--- a/app.css
+++ b/app.css
@@ -1,13 +1,16 @@
-#video-placeholder {
+body {
+  margin: 0;
+  padding: 0;
+}
+
+#screen {
   width: 100%;
+  height: 400px;
 }
 
 #progressBar {
   width: 99%;
 }
 
-body {
-  margin: 0;
-  background-color: white;
-}
+
 
