--- a/public/userapps/testUser/hardware.css
+++ b/public/userapps/testUser/hardware.css
@@ -1,16 +1,40 @@
-#myLED {
-  hardware: physical-output (gpio:"4");
+#playPause {
+  hardware: physical-button (gpio:"4");
 }
 
-physical-output {
+physical-button {
   display: none;
 }
 
-#turnON {
+#progressBar {
+  hardware: physical-motorized-pot (i2c-port:url("/dev/i2c-1"), i2c-addr:0x40);
+}
+
+physical-motorized-pot {
+  display: none;
+}
+
+#prev {
   hardware: physical-button (gpio:"17");
 }
 
 physical-button {
+  display: none;
+}
+
+#next {
+  hardware: physical-button (gpio:"27");
+}
+
+physical-button {
+  display: none;
+}
+
+#video-placeholder {
+  hardware:  undefined;
+}
+
+ {
   display: none;
 }
 
