--- a/public/userapps/testUser/hardware.css
+++ b/public/userapps/testUser/hardware.css
@@ -1,8 +1,8 @@
-#progressBar {
-  hardware: physical-motorized-pot (i2c-addr:0x18,i2c-port:url("/dev/i2c-1"));
+#tempDOWN {
+  hardware: physical-button (gpio:"4");
 }
 
-physical-motorized-pot {
+physical-button {
   display: none;
 }
 
