--- a/public/demos/videoplayer/hardware.css
+++ b/public/demos/videoplayer/hardware.css
@@ -1,13 +1,5 @@
-#progressBar {
-  hardware: physical-motorized-pot (motora:"4",motorb:"17",touch:"27",i2c-addr:0x48,i2c-port:url("/dev/i2c-1"));
-}
-
-physical-motorized-pot {
-  display: none;
-}
-
-#playPause {
-  hardware: physical-button (gpio:"22");
+#next {
+  hardware: physical-button (gpio:"4");
 }
 
 physical-button {
@@ -15,18 +7,26 @@ physical-button {
 }
 
 #prev {
-  hardware: physical-button (gpio:"5");
+  hardware: physical-button (gpio:"17");
 }
 
 physical-button {
   display: none;
 }
 
-#next {
-  hardware: physical-button (gpio:"6");
+#playPause {
+  hardware: physical-button (gpio:"27");
 }
 
 physical-button {
+  display: none;
+}
+
+#progressBar {
+  hardware: physical-motorized-pot (motora:"22",motorb:"5",touch:"6",i2c-addr:0x48,i2c-port:url("/dev/i2c-1");
+}
+
+physical-motorized-pot {
   display: none;
 }
 
